--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
 </head>
 <body>
         <!-- navbar -->
-  <nav class="navbar navbar-expand-lg bg-blueDiesel">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-blueDiesel">
             <div class="container-fluid">
               <a class="navbar-brand logo" href="index.html">
                 <img src="asset/img/logo.jpg" class="rounded-3 border border-warning logo" alt="Logo FCRuz" height="40">
               </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler me-2" 
+                type="button" 
+                data-bs-toggle="collapse" 
+                data-bs-target="#navbarSupportedContent" 
+                aria-controls="navbarSupportedContent" 
+                aria-expanded="false" 
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse position-absolute  end-0" id="navbarNav">
-                <ul class="navbar-nav">
+              <div class="collapse navbar-collapse pe-2 end-0" 
+                id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                   <li class="nav-item">
                     <a class="nav-link lettercolor active" aria-current="page" href="#">Home</a>
                   </li>
