commit para felipe fixed top navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <!-- navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-blueDiesel">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-blueDiesel fixed-top">
             <div class="container-fluid">
               <a class="navbar-brand logo" href="index.html">
                 <img src="asset/img/logo.jpg" class="rounded-3 border border-warning logo" alt="Logo FCRuz" height="40">
