--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse pe-2 end-0"
-                id="navbarSupportedContent">
+              <div class="collapse navbar-collapse pe-2 end-0" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                   <li class="nav-item">
                     <a class="nav-link lettercolor active fade" aria-current="page" href="#">Home</a>
