--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
     </div>
     <div class="col-12 col-md-6 col-lg-7">
       <h4 class="fs-3 text-start px-3">¿Quién soy?</h4>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eos a nulla provident molestiae id sapiente
-        quasi qui ea consequuntur, at ipsum voluptates quaerat, laudantium aliquam! Nesciunt nulla sunt eum.</p>
+      <P>Felipe Alejandro Cruz Bonilla</P>
+      <p>Nacido en Chuquicamata - Chile </p>
+
+      <p>Ingeniero Informático de la universidad Tecnológica de Chile INACAP Titulado el año 2012, Actualmente me encuentro trabajando como especialista en el área de impresión. .</p>
       <p>Me apasiona crear software excelente que mejore la vida de quienes me rodean. Me especializo en la creación de software para clientes que van desde individuos y pequeñas empresas hasta grandes corporaciones empresariales. ¿Qué harías si tuvieras un experto en software disponible a tu alcance?</p>
    
     </div>
@@ -103,7 +105,7 @@
           </h3>
         </div>
         <div class="card-body">
-          <p>Me gusta Sistema operativo linux</p>
+          <p>Amante del sofware libre y usuario por muchos años de Linux. Donde tambien impartia Talleres sobre este gran sistema operativo</p>
         </div>
       </div>
     </div>
@@ -125,13 +127,11 @@
       <div class="card shadow border border-dark">
         <div class="card-header text-light" style="background-color: #112B3C;">
           <h3 class="text-center fs-1">
-            <i class="fas fa-code"></i>
+            <i class="fa-brands fa-codepen"></i>
           </h3>
         </div>
         <div class="card-body">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam at necessitatibus placeat iure
-            minima inventore quae veniam natus repellat id cum eum eaque quibusdam et atque est accusantium,
-            voluptatum corporis.</p>
+          <p>Unos de mi hobby es impresión en 3d. donde tengo mi Emprendimiento YXZ Impresiones 3d.</p>
         </div>
       </div>
     </div>
@@ -272,7 +272,7 @@
                       </h2>
                       <div id="flush-collapseOne3" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlush-3">
                         <div class="accordion-body text-center">
-                          <img src="/asset/img/html5.png" alt="html5">
+                          <img src="/asset/img/logo.jpg" alt="html5">
                        </div>
                       </div>
                     </div>
@@ -340,7 +340,7 @@
               <i class="fa-brands fa-linkedin fa-2x "></i>
               </a>
           </div>
-            <p class="mb-0">Felipe Cruz Bonilla2021. Todos los derechos reservados.</p>
+            <p class="mb-0">Felipe Cruz Bonilla - 2021. Todos los derechos reservados.</p>
         </footer>
 
     <script src="/asset/js/bootstrap.bundle.min.js"></script>
