--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             <p class="mb-0">Felipe Cruz Bonilla - 2021. Todos los derechos reservados.</p>
         </footer>
 
-    <script src="/asset/js/bootstrap.bundle.min.js"></script>
+    <script src="./asset/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
