--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;800&display=swap" rel="stylesheet">
-  <title>Felipe Cruz</title>
+  <link rel="icon" type="image/png" href="./asset/icon/tux.png">
+  <title>Felipe Cruz Bonilla</title>
 </head>
 
 <body>
