se agrego logo bootstrap

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                         <div class="accordion-body text-center">
                           <img src="./asset/img/html5.png" alt="html5">
                           <img src="./asset/img/css.png" alt="css">
+                          <img src="./asset/img/Bootstraplogo.png" alt="css">
                         </div>
                       </div>
                     </div>
