titulos de quien soy

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         </div>
       </div>
       <div class="col-12 col-md-6 col-lg-7">
-        <h4 class="fs-3 text-start px-3">¿Quién soy?</h4>
-        <P>Felipe Alejandro Cruz Bonilla</P>
+        <h1 class="fs-3 text-start text-center px-3">¿Quién soy?</h1>
+        <h2>Felipe Alejandro Cruz Bonilla</h2>
         <p>Nacido en Chuquicamata - Chile </p>
 
         <p>Ingeniero Informático de la universidad Tecnológica de Chile INACAP Titulado el año 2012, Actualmente me
